--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "http://zyphs21.github.io"
 
 # About/contact
 owner: 
-  name: "张远平"
+  name: "李宇"
   email: yuanpingzhang123@gmail.com
   bio: ""
 
