--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Hanson
+title: yu
 header-img: "img/facebook.jpg"
 tagline: "cn"  
 description: "make something interesting"  
